[gd_scene load_steps=4 format=3 uid="uid://3m8mdqt1rwg3"]

[ext_resource type="Script" path="res://Scenes/turret.gd" id="1_rxxm3"]
[ext_resource type="Texture2D" uid="uid://2qor4oid4mn7" path="res://Art/128x128_white_circle.png" id="2_l3ayu"]
[ext_resource type="Texture2D" uid="uid://cii37ffppbca" path="res://Art/32x32_white_square.png" id="3_x7t7t"]

[node name="Turret" type="Node2D"]
script = ExtResource("1_rxxm3")

[node name="Sprites" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Sprites"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.02, 0.02)
texture = ExtResource("2_l3ayu")

[node name="Barrel" type="Sprite2D" parent="Sprites"]
position = Vector2(5.5, 0)
scale = Vector2(0.34375, 0.0625)
texture = ExtResource("3_x7t7t")

[node name="AimCone" type="Polygon2D" parent="."]
color = Color(1, 1, 1, 0.196078)
polygon = PackedVector2Array(0, 0, 100, 10, 100, -10)

[node name="AttackFullCone" type="Polygon2D" parent="."]
visible = false
color = Color(1, 1, 1, 0.196078)
polygon = PackedVector2Array(0, 0, 100, 10, 100, -10)

[node name="AttackCone" type="Polygon2D" parent="AttackFullCone"]
color = Color(1, 0, 0, 1)
polygon = PackedVector2Array(0, 0, 100, 5, 100, -4)

[node name="AimTimer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="QueuedCones" type="Node2D" parent="."]
